# plex-renamer

./: .gitignore  CHANGELOG.md  FOLDER_STRUCTURE.md  README.md  pyproject.toml  rename_media_files.py  requirements.txt  transcode_media_files.py
resources/plex_media_structure/: naming_and_organizing_movie_files.md  naming_and_organizing_tv_show_files.md
src/: __init__.py  rename_media_files.py  transcode_media_files.py
src/common/: __init__.py  constants.py  file_manager.py  logger.py
src/rename_utils/: __init__.py  formatter.py  parser.py  tmdb_client.py
src/transcode_utils/: __init__.py  transcoder.py
